# mapfile_parser

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_suggestion.yml  frug_report.yml
.github/workflows/: maturin_upload_pypi.yml  md_lint.yml  mypy.yml  publish_crate.yml  tests.yml  upload_pypi.yml
src/mapfile_parser/: __init__.py  __main__.py  mapfile.py  mapfile_parser.pyi  mapfile_rs.py  progress_stats.py  progress_stats_rs.py  utils.py
src/mapfile_parser/frontends/: __init__.py  bss_check.py  first_diff.py  function_sizes_csv.py  jsonify.py  objdiff_report.py  pj64_syms.py  progress.py  sym_info.py  symbol_sizes_csv.py  upload_frogress.py
src/mapfile_parser/internals/: __init__.py  objdiff_report.py
src/rs/: file.rs  found_symbol_info.rs  json_element.rs  lib.rs  mapfile.rs  maps_comparison_info.rs  parser.rs  progress_stats.rs  report.rs  section.rs  segment.rs  symbol.rs  symbol_comparison_info.rs  symbol_decomp_state.rs  utils.rs
tests/: check_progress_nonmatchings.py  update_outputs.py
tests/maps/: dnm+_1.0_static.map.map  dnm+_1.0_static.map2.map  drmario64.cn.map  drmario64.us.lld.map  drmario64.us.map  stcen.map  vim.map  w0_000.map
tests/maps/gnuld/misc/: eth_simple_mips.map
tests/maps/gnuld/n64/: puzzleleague64.usa.map
tests/maps/ld.lld/n64/: drmario64.us.lld.map
tests/maps/mwld/gcn_1.3.2/zelda_tww/GZLE01/: framework.elf.MAP
tests/maps/mwld/gcn_1.3.2/zelda_tww/GZLE01/d_a_acorn_leaf/: d_a_acorn_leaf.plf.MAP  d_a_acorn_leaf.preplf.MAP
tests/maps/mwld/gcn_1.3.2/zelda_tww/GZLE01/d_a_agbsw0/: d_a_agbsw0.plf.MAP  d_a_agbsw0.preplf.MAP
tests/maps/mwld/gcn_2.7/zelda_tp/: framework.elf.MAP
tests/maps/mwld/gcn_2.7/zelda_tp/d_a_alldie/: d_a_alldie.plf.MAP  d_a_alldie.preplf.MAP
tests/maps/mwld/gcn_2.7/zelda_tp/d_a_andsw/: d_a_andsw.plf.MAP  d_a_andsw.preplf.MAP
tests/maps/mwld/misc_gc_2.7/: eth_simple_ppc.map  eth_simple_ppc2.map
tests/output/: animalforest.jp.csv  animalforest.jp.symbols.csv  banjotooie_decompressed.csv  banjotooie_decompressed.symbols.csv  dnm+_1.0_foresta.map.sym  dnm+_1.0_foresta.map.symbols.csv  dnm+_1.0_foresta.map2.objdiff_report.json  dnm+_1.0_static.map.json  dnm+_1.0_static.map.machine.json  dnm+_1.0_static.map.sym  dnm+_1.0_static.map.symbols.csv  dnm+_1.0_static.map2.json  dnm+_1.0_static.map2.machine.json  dnm+_1.0_static.map2.sym  dnm+_1.0_static.map2.symbols.csv  drmario64.cn.csv  drmario64.cn.json  drmario64.cn.machine.json  drmario64.cn.objdiff_report.json  drmario64.cn.symbols.csv  drmario64.us.csv  drmario64.us.json  drmario64.us.lld.csv  drmario64.us.lld.json  drmario64.us.lld.machine.json  drmario64.us.lld.objdiff_report.json  drmario64.us.lld.sym  drmario64.us.lld.symbols.csv  drmario64.us.machine.json  drmario64.us.objdiff_report.json  drmario64.us.sym  drmario64.us.symbols.csv  eth_simple_mips.json  eth_simple_mips.machine.json  eth_simple_mips.objdiff_report.json  mm.csv  oot_gcc.csv  oot_gcc.sym  prime.GM8E01_00.csv  prime.GM8E01_00.symbols.csv  (+27 more)
tests/output/gnuld/misc/: eth_simple_mips.symbols.csv  stcen.csv  stcen.symbols.csv  vim.csv  vim.machine.json  w0_000.sym
tests/output/gnuld/n64/: animalforest.jp.sym  animalforest.jp.symbols.csv  banjotooie_decompressed.csv  banjotooie_decompressed.sym  banjotooie_decompressed.symbols.csv  drmario64.cn.json  drmario64.cn.objdiff_report.json  drmario64.cn.sym  drmario64.cn.symbols.csv  drmario64.us.objdiff_report.json  drmario64.us.sym  eth_simple_mips.csv  eth_simple_mips.json  eth_simple_mips.machine.json  eth_simple_mips.sym  mm.sym  oot_gcc.csv  oot_gcc.sym  puzzleleague64.usa.sym
tests/output/ld.lld/n64/: drmario64.us.lld.csv  drmario64.us.lld.machine.json  drmario64.us.lld.sym
tests/output/mwld/gcn/: dnm+_1.0_foresta.map.objdiff_report.json  dnm+_1.0_foresta.map.sym  dnm+_1.0_foresta.map2.csv  dnm+_1.0_foresta.map2.symbols.csv  dnm+_1.0_static.map.csv  dnm+_1.0_static.map.objdiff_report.json  dnm+_1.0_static.map2.csv  dnm+_1.0_static.map2.objdiff_report.json  prime.GM8E01_00.sym  prime.GM8E01_01.sym
tests/output/mwld/gcn_1.3.2/zelda_tww/GZLE01/: framework.elf.csv  framework.elf.objdiff_report.json  framework.elf.sym  framework.elf.symbols.csv
tests/output/mwld/gcn_1.3.2/zelda_tww/GZLE01/d_a_acorn_leaf/: d_a_acorn_leaf.plf.csv  d_a_acorn_leaf.plf.json  d_a_acorn_leaf.plf.machine.json  d_a_acorn_leaf.plf.objdiff_report.json  d_a_acorn_leaf.plf.sym  d_a_acorn_leaf.plf.symbols.csv  d_a_acorn_leaf.preplf.csv  d_a_acorn_leaf.preplf.json  d_a_acorn_leaf.preplf.machine.json  d_a_acorn_leaf.preplf.objdiff_report.json  d_a_acorn_leaf.preplf.sym  d_a_acorn_leaf.preplf.symbols.csv
tests/output/mwld/gcn_1.3.2/zelda_tww/GZLE01/d_a_agbsw0/: d_a_agbsw0.plf.csv  d_a_agbsw0.plf.json  d_a_agbsw0.plf.machine.json  d_a_agbsw0.plf.objdiff_report.json  d_a_agbsw0.plf.sym  d_a_agbsw0.plf.symbols.csv  d_a_agbsw0.preplf.csv  d_a_agbsw0.preplf.json  (+4 more)
tests/output/mwld/gcn_2.7/zelda_tp/: framework.elf.csv  framework.elf.sym  framework.elf.symbols.csv
tests/output/mwld/gcn_2.7/zelda_tp/d_a_alldie/: d_a_alldie.plf.csv  d_a_alldie.plf.json  d_a_alldie.plf.machine.json  d_a_alldie.plf.objdiff_report.json  d_a_alldie.plf.symbols.csv  d_a_alldie.preplf.json  d_a_alldie.preplf.machine.json  d_a_alldie.preplf.objdiff_report.json  d_a_alldie.preplf.sym
tests/output/mwld/gcn_2.7/zelda_tp/d_a_andsw/: d_a_andsw.plf.json  d_a_andsw.plf.machine.json  d_a_andsw.plf.objdiff_report.json  d_a_andsw.plf.sym  d_a_andsw.plf.symbols.csv  d_a_andsw.preplf.csv  d_a_andsw.preplf.json  d_a_andsw.preplf.machine.json  d_a_andsw.preplf.objdiff_report.json
tests/output/mwld/misc_gc_2.7/: eth_simple_ppc.csv  eth_simple_ppc.json  eth_simple_ppc.machine.json  eth_simple_ppc.objdiff_report.json  eth_simple_ppc.sym  eth_simple_ppc.symbols.csv  eth_simple_ppc2.csv  eth_simple_ppc2.json  eth_simple_ppc2.machine.json  eth_simple_ppc2.objdiff_report.json  eth_simple_ppc2.sym  eth_simple_ppc2.symbols.csv
tests/output/mwld/wii_1.3/: rb3_main.elf.csv  rb3_main.elf.sym  rb3_main.elf.symbols.csv
