# SPDX-FileCopyrightText: © 2023-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "mapfile_parser"
version = "2.7.5"
edition = "2024"
rust-version = "1.85.0"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
description = "Map file parser library focusing decompilation projects"
readme = "README.md"
repository = "https://github.com/Decompollaborate/mapfile_parser"
license = "MIT"
keywords = ["mapfile", "parser", "decomp", "decompilation"]
exclude = ["tests/output", "*.py", "*.pyi", ".github", ".markdownlint.jsonc", "mypy.ini", "requirements.txt", "pyproject.toml", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mapfile_parser"
path = "src/rs/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
python_bindings = ["dep:pyo3", "objdiff_report", "serde", "dep:serde_json"]
serde = ["dep:serde"]
objdiff_report = ["dep:objdiff-core"]

[dependencies]
regex = "1.10.2"
pyo3 = { version = "0.23.5", optional = true, features = ["extension-module"]}
lazy_static = "1.4.0"
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
# objdiff-core = { version = "2.3.3", default-features = false, features = ["bindings"], optional = true }
objdiff-core = { git = "https://github.com/encounter/objdiff.git", rev="f7c3501eaed6f29ea1d5317f673bfdfa5a2d7414", default-features = false, features = ["bindings", "serde", "std"], optional = true }
serde_json = { version = "1", optional = true }
