# SPDX-FileCopyrightText: © 2023-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "mapfile_parser"
version = "2.7.5"
edition = "2021"
rust-version = "1.65.0"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
description = "Map file parser library focusing decompilation projects"
readme = "README.md"
repository = "https://github.com/Decompollaborate/mapfile_parser"
license = "MIT"
keywords = ["mapfile", "parser", "decomp", "decompilation"]
exclude = ["tests/output", "*.py", "*.pyi", ".github", ".markdownlint.jsonc", "mypy.ini", "requirements.txt", "pyproject.toml", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mapfile_parser"
path = "src/rs/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

serde = ["dep:serde"]

python_bindings = ["dep:pyo3"]

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"
serde = { version = "1.0", features = ["derive"], optional = true }
pyo3 = { version = "0.23.5", optional = true, features = ["extension-module"]}
