# SPDX-FileCopyrightText: © 2023-2025 Decompollaborate
# SPDX-License-Identifier: MIT

[package]
name = "mapfile_parser"
version = "2.9.3"
edition = "2021"
rust-version = "1.74.0"
authors = ["Anghelo Carvajal <angheloalf95@gmail.com>"]
description = "Map file parser library focusing decompilation projects"
readme = "README.md"
repository = "https://github.com/Decompollaborate/mapfile_parser"
license = "MIT"
keywords = ["mapfile", "parser", "decomp", "decompilation"]
exclude = ["tests/output", "*.py", "*.pyi", ".github", ".markdownlint.jsonc", "mypy.ini", "requirements.txt", "pyproject.toml", "tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mapfile_parser"
path = "src/rs/lib.rs"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []

serde = [
    "dep:serde",
    # "objdiff-core?/serde"
]
objdiff_report = [
    "dep:objdiff-core",
]

python_bindings = [
    "dep:pyo3",
    "objdiff_report",
    "serde",
    "dep:serde_json",
]

[dependencies]
regex = "1.10.2"
lazy_static = "1.4.0"

serde = { version = "1.0", features = ["derive"], optional = true }
objdiff-core = { version = "2.3.3", default-features = false, features = ["bindings"], optional = true }
# objdiff-core = { git = "https://github.com/encounter/objdiff.git", rev="a367af612b8b30b5bdf40e5c1d0e45df46a5e3e9", default-features = false, features = ["bindings", "std"], optional = true }
serde_json = { version = "1", optional = true }
pyo3 = { version = "0.23.5", optional = true, features = ["extension-module"]}
