# SPDX-FileCopyrightText: © 2022-2023 Decompollaborate
# SPDX-License-Identifier: MIT

[project]
name = "mapfile_parser"
version = "2.1.0"
description = "Map file parser library focusing decompilation projects"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/Decompollaborate/mapfile_parser"
"Bug Tracker" = "https://github.com/Decompollaborate/mapfile_parser/issues"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.cibuildwheel]
skip = ["cp36-*"]
